Dark mode : fixing icon and dark mode toggle

--- a/src/app/pages/settings/settings.page.scss
+++ b/src/app/pages/settings/settings.page.scss
@@ -75,6 +75,8 @@ ion-item{
   ion-toggle{
     --background-checked: #2EC6FA;
     --background: var(--ion-color-unique-1);
+    --handle-background: white;
+    --handle-background-checked: white;
   }
 }
 
