--- a/src/global.scss
+++ b/src/global.scss
@@ -620,3 +620,7 @@ ion-card{
   color: var(--ion-color-icon-2);
   background: var(--ion-color-contrast);
 }
+
+[aria-checked=true].sc-ion-alert-md .sc-ion-alert-md .alert-radio-label, .alert-radio-label.sc-ion-alert-md  {
+  color:var(--ion-color-text);
+}
